--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.6",
     "@types/three": "^0.173.0",
+    "gsap": "^3.12.7",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
