--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.7",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6",
