--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "@types/three": "^0.173.0",
+    "axios": "^1.7.9",
     "gsap": "^3.12.7",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
